# admin-api/generated/go-server/go/api.go
@@ -20,7 +20,9 @@ import (
 // The DefaultApiRouter implementation should parse necessary information from the http request,
 // pass the data to a DefaultApiServicer to perform the required actions, then write the service results to the http response.
 type DefaultApiRouter interface { 
+	CreateStore(http.ResponseWriter, *http.Request)
 	CreateTransaction(http.ResponseWriter, *http.Request)
+	DeleteStore(http.ResponseWriter, *http.Request)
 	GetStores(http.ResponseWriter, *http.Request)
 	GetTransaction(http.ResponseWriter, *http.Request)
 }
@@ -31,7 +33,9 @@ type DefaultApiRouter interface {
 // while the service implementation can ignored with the .openapi-generator-ignore file
 // and updated with the logic required for the API.
 type DefaultApiServicer interface { 
+	CreateStore(context.Context, string) (ImplResponse, error)
 	CreateTransaction(context.Context, string, UploadTransactionRequest) (ImplResponse, error)
+	DeleteStore(context.Context, string) (ImplResponse, error)
 	GetStores(context.Context) (ImplResponse, error)
 	GetTransaction(context.Context, string, string) (ImplResponse, error)
 }
